--- a/src/index.css
+++ b/src/index.css
@@ -1,167 +1,119 @@
-
-:root {
-    --background: #ffffff;
-    --text-primary: #000;
-    --text-secondary: #8e05c2;
-    --accent: #8e05c2;
-    --border: #333;
-    --form-bg: #fff;
-  }
-  
-  [data-theme='dark'] {
-    --background: #000;
-    --text-primary: #fff;
-    --text-secondary: #8e05c2;
-    --accent: #8e05c2;
-    --border: #808080;
-    --form-bg: #191919;
-  }
-  
+ 
   * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
   }
-  
-  
+
   body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Poppins', 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    overflow-x: hidden;
+  }
+
+  :root {
+    --primary: #118c4f;
+    --background: #f5f8ff;
+  }
+
+  .primary {
+    color: var(--primary);
   }
   
+  ul {
+    list-style-type: none;
+  }
+
   a {
-    color: var(--text-secondary);
+    text-decoration: none;
+    color: #333;
   }
-  
-  .app {
-    background-color: var(--background);
-    color: var(--text-primary);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: .8rem;
-    transition: all .5s;
-  }
-  
-  .login h1 {
-    text-align: center;
-    margin: 0.5rem 0 2rem;
-    font-size: 48px;
-  }
-  
-  h2 {
-    text-align: center;
-    padding: 1rem;
-  }
-  
-  .theme-toggle i {
-    font-size: 2rem;
-    cursor: pointer;
-  }
-  
-  .theme-toggle {
-    text-align: center;
-  }
-  
+
   .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem;
-    width: 300px;
+    max-width: 1240px;
     margin: auto;
-    box-shadow: 0px 0px 12px var(--border);
-    border-radius: 8px;
-    background-color: var(--form-bg);
   }
-  
-  .top {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
+
+  h1 {
+    font-size: 3.5rem;
+    line-height: 1.2;
   }
-  
-  .top i {
-    font-size: 1rem;
+
+  h2 {
+    font-size: 2.4rem;
+    line-height: 1.2;
   }
-  
-  .divider {
-    width: 100%;
-    text-align: center;
-    border-bottom: 1px solid var(--text-primary);
-    line-height: .1rem;
-    margin: 2rem 0;
+
+  h5 {
+    font-size: 1.1rem;
+    line-height: 1.2;
   }
-  
-  span {
-    padding: 0 10px;
-    background-color: var(--form-bg);
+
+  a {
+    font-size: 1.2rem;
   }
-  
-  form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label {
-    margin: 8px 0;
-    font-weight: 600;
-  }
-  
-  input {
-    padding: 8px;
-    margin-bottom: 8px;
-    border-radius: 6px;
-    border: 1px solid var(--border);
-    background: var(--background);
-    color: var(--text-primary);
-  }
-  
-  .remember {
-    display: flex;
-    align-items: center;
-    width: 100%;
-  }
-  
-  input[type=checkbox]:checked {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .remember p {
-    padding-left: 8px;
-  }
-  
-  button {
-    background-color: var(--accent);
-    border: 1px solid var(--accent);
+
+  .btn {
+    padding: 14px 32px;
+    border: 1px solid var(--primary);
+    background-color: var(--primary);
     color: #fff;
-    margin: 16px 0;
-    padding: 10px;
-    border-radius: 10px;
+    border-radius: 24px 4px;
+    font-size: 1.1rem;
     font-weight: 600;
     cursor: pointer;
   }
-  
-  .bottom {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-size: .8rem;
+
+  .btn:hover {
+    box-shadow: rgb(0 0 0 / 15%) 0px 8px 24px;
   }
-  
-  .create {
+
+  input {
+    padding: 12px 32px;
+    border: 1px solid var(--primary);
+    background: transparent;
+    border-radius: 24px 4px;
     font-size: 1rem;
-    margin-top: 1rem;
-    cursor: pointer;
+    margin-right: .8rem;
+    font-family: 'Poppins', sans-serif;
   }
-  
-  @media screen and (max-width:478px) {
-    .login {
-      width: 95%;
+
+  @media screen and (max-width:768px){
+    h1 {
+      font-size: 2.1rem;
+      line-height: 1.2;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      line-height: 1.2;
+    }
+
+    h5 {
+      font-size: 1.1rem;
+      line-height: 1.2;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+
+    .btn {
+      width: 100%;
+      margin: 1rem 0;
+    }
+
+    input {
+      width: 100%;
     }
   }
+
+
+
+  
+
+
+  
